--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,17 +15,58 @@ android {
         ndk {
             abiFilters "armeabi-v7a"
         }
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    signingConfigs {
+        ssConfig {
+            storeFile file("ssreader.keystore")
+            storePassword "ssreader_apk"
+            keyAlias "ssreader"
+            keyPassword "ssreader_apk"
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.ssConfig
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api project(':pdgreader')
+    testImplementation 'junit:junit:4.12'
+
+    def version_support = "27.1.1"
+    def version_constraint = "1.1.0"
+    def version_lifecycle = "1.1.0"
+    def version_rxjava = "2.1.16"
+    def version_rxandroid = "2.0.2"
+    def version_rxpermission = "0.10.2"
+
+    implementation "com.android.support:appcompat-v7:$version_support"
+    implementation "com.android.support:support-annotations:$version_support"
+    implementation "com.android.support:exifinterface:$version_support"
+    implementation "com.android.support:recyclerview-v7:$version_support"
+    implementation "com.android.support:design:$version_support"
+    implementation "com.android.support:cardview-v7:$version_support"
+    implementation "com.android.support.constraint:constraint-layout:$version_constraint"
+
+    implementation "io.reactivex.rxjava2:rxjava:$version_rxjava"
+    implementation "io.reactivex.rxjava2:rxandroid:$version_rxandroid"
+
+    implementation "android.arch.lifecycle:runtime:$version_lifecycle"
+    implementation "android.arch.lifecycle:extensions:$version_lifecycle"
+    annotationProcessor "android.arch.lifecycle:compiler:$version_lifecycle"
+    implementation "android.arch.lifecycle:reactivestreams:$version_lifecycle"
+    implementation "com.github.tbruyelle:rxpermissions:$version_rxpermission"
+
+    implementation project(':pdgreader')
 }
