--- a/pdgreader/build.gradle
+++ b/pdgreader/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$version_rxjava"
     implementation "io.reactivex.rxjava2:rxandroid:$version_rxandroid"
     implementation "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}"
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 }
